--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-uuid": "^2.0.0",
+    "styled-components": "^6.0.7",
     "use-immer": "^0.9.0",
     "usehooks-ts": "^2.9.1"
   },
